Modificate alcune interazioni con il DAO Aggiunta la factory per il paymentGateway così da disaccoppiare il controller di pagamento dal modo con cui viene implementato